# revive-differential-tests

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  CLAUDE.md  Cargo.toml  Makefile  Makefile.toml  README.md  dev-genesis.json  embed_report.py  genesis.json  index.html  run_tests.sh  schema.json
assets/: benchmark-report.html  config.yaml  lighthouse-config.yaml  mnemonics.yaml  polkadot-assethub-zombienet.toml  prod-genesis.json  revive_metadata.scale  test_metadata.json  westend-assethub-zombienet.toml  westend-session0-executor-params.json
crates/common/: Cargo.toml
crates/common/src/: lib.rs  subscriptions.rs
crates/common/src/cached_fs/: mod.rs
crates/common/src/concepts/: blocking_executor.rs  mod.rs
crates/common/src/fs/: cached_file_system.rs  clear_dir.rs  mod.rs  normalize_path.rs
crates/common/src/futures/: async_lazy_lock.rs  await_map.rs  heartbeat.rs  mod.rs  poll.rs  retry.rs  timed.rs  types.rs
crates/common/src/iterators/: either_iter.rs  files_with_extension_iterator.rs  mod.rs
crates/common/src/macros/: define_wrapper_type.rs  mod.rs
crates/common/src/types/: identifiers.rs  mod.rs  mode.rs  parsed_compilation_specifier.rs  parsed_compile_specifier.rs  parsed_test_specifier.rs  private_key_allocator.rs  round_robin_pool.rs  version_or_requirement.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: constants.rs  lib.rs  revive_js.rs  revive_resolc.rs  solc.rs  utils.rs
crates/compiler/tests/: lib.rs
crates/compiler/tests/assets/array_one_element/: main.sol
crates/compiler/tests/assets/library_call/: lib.sol  main.sol
crates/compiler/tests/assets/loop_with_array/: main.sol
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: arguments.rs  cached_compiler.rs  common.rs  interpreter.rs  lib.rs  main.rs  pool.rs
crates/core/src/compilations/: driver.rs  entry_point.rs  mod.rs
crates/core/src/differential_benchmarks/: driver.rs  entry_point.rs  execution_state.rs  inclusion_watcher.rs  mod.rs  transaction_finder.rs  tx_profiler.rs  watcher.rs
crates/core/src/differential_tests/: driver.rs  entry_point.rs  execution_state.rs  mod.rs
crates/core/src/driver/: compiler.rs  input.rs  mod.rs
crates/core/src/helpers/: cached_compiler.rs  compile.rs  corpus_definition_processor.rs  corpus_processor.rs  metadata.rs  mod.rs  pool.rs  test.rs
crates/format/: Cargo.toml
crates/format/src/: case.rs  corpus.rs  input.rs  lib.rs  macros.rs  metadata.rs  mode.rs  modes.rs  semantic_tests.rs  semantic_tests_parser.rs  steps.rs  traits.rs
crates/format/src/semantic_tests/: function_parser.rs  mod.rs  sections.rs  test_configuration.rs
crates/ml-test-runner/: Cargo.toml  README.md
crates/ml-test-runner/src/: cached_compiler.rs  main.rs
crates/node/: Cargo.toml
crates/node-interaction/: Cargo.toml
crates/node-interaction/src/: blocking_executor.rs  config.rs  connector.rs  lib.rs  nonce.rs  opcode_profile.rs  pool.rs  subxt_provider.rs  tokio_runtime.rs  trace.rs  traits.rs  transaction.rs
crates/node-interaction/src/providers/: batching_layer.rs  concurrency_limiter.rs  fallback_gas_filler.rs  mod.rs  nonce_filler.rs  receipt_retry_layer.rs  retry_layer.rs
crates/node/src/: chainspec.rs  common.rs  constants.rs  geth.rs  kitchensink.rs  lib.rs  lighthouse_geth.rs  pool.rs  process.rs  substrate.rs  zombie.rs
crates/node/src/helpers/: chainspec.rs  command.rs  eth_rpc.rs  mod.rs  node_directories.rs  node_id_allocator.rs  process.rs
crates/node/src/node_implementations/: geth.rs  lighthouse_geth.rs  mod.rs  polkadot_omni_node.rs  revive_dev_node.rs  substrate.rs  zombienet.rs  zombienet_core_assignment.rs
crates/node/src/node_implementations/common/: chainspec.rs  mod.rs  process.rs  revive.rs
crates/node/src/node_process/: allocated_port.rs  eth_rpc.rs  geth.rs  lighthouse.rs  mod.rs  polkadot_omni_node.rs  port_allocator.rs  process.rs  revive_dev_node.rs  zombienet.rs
crates/node/src/provider_utils/: batching_layer.rs  concurrency_limiter.rs  fallback_gas_filler.rs  fallback_gas_provider.rs  mod.rs  provider.rs  receipt_retry_layer.rs  zeroed_cached_nonce_manager.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/proc-macros/src/context/: codegen.rs  codegen_as_ref.rs  mod.rs  parse.rs  types.rs  validate.rs
crates/proc-macros/src/runner_event/: codegen.rs  mod.rs  parse.rs  types.rs  validate.rs
crates/report/: Cargo.toml
crates/report-processor/: Cargo.toml
crates/report-processor/src/: compare_hashes.rs  export_hashes.rs  main.rs
crates/report/src/: aggregator.rs  analyzer.rs  common.rs  lib.rs  opcode_profile.rs  reporter.rs  reporter_event.rs  runner_event.rs
crates/report/templates/: benchmark-report.html
crates/retester/: Cargo.toml
crates/retester/src/: main.rs
crates/solc-binaries/: Cargo.toml
crates/solc-binaries/src/: cache.rs  download.rs  lib.rs  list.rs
raw/: benchmark-2026-04-08-104044.json  benchmark-2026-04-09-131522.json  benchmark-2026-05-22-201134.json  benchmark-2026-05-26-153337.json  benchmark-2026-05-27-121434.json  benchmark-2026-05-28-144853.json  benchmark-2026-06-01-105651.json  benchmark-2026-06-03-155610.json  benchmark-2026-06-04-100945.json  benchmark-2026-06-04-213555.json  benchmark-2026-06-05-113404.json  benchmark-2026-06-05-153735.json  benchmark-2026-06-19-185109.json  benchmark-2026-06-19-214923.json  benchmark-2026-07-01-171738.json  benchmark-2026-07-01-183004.json  benchmark-2026-07-01-185022.json
reports/: benchmark-2026-03-18-034642.html  benchmark-2026-03-21-092021.html  benchmark-2026-03-23-092641.html  benchmark-2026-03-23-142813.html  benchmark-2026-03-23-151639.html  benchmark-2026-03-24-052430.html  benchmark-2026-03-24-062220.html  benchmark-2026-03-28-212726.html  benchmark-2026-04-08-104044.html  benchmark-2026-04-09-131522.html  benchmark-2026-04-10-042336.html  benchmark-2026-04-22-175855.html  benchmark-2026-04-23-060337.html  benchmark-2026-05-19-020833.html  benchmark-2026-05-19-185940.html  benchmark-2026-05-20-070519.html  (+35 more)
(+30 files in other folders)
