[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
edition = "2024"
repository = "https://github.com/paritytech/revive-differential-testing.git"
rust-version = "1.87.0"

[workspace.dependencies]
revive-dt-common = { version = "0.1.0", path = "crates/common" }
revive-dt-compiler = { version = "0.1.0", path = "crates/compiler" }
revive-dt-config = { version = "0.1.0", path = "crates/config" }
revive-dt-core = { version = "0.1.0", path = "crates/core" }
revive-dt-format = { version = "0.1.0", path = "crates/format" }
revive-dt-node = { version = "0.1.0", path = "crates/node" }
revive-dt-node-interaction = { version = "0.1.0", path = "crates/node-interaction" }
revive-dt-node-pool = { version = "0.1.0", path = "crates/node-pool" }
revive-dt-report = { version = "0.1.0", path = "crates/report" }
revive-dt-solc-binaries = { version = "0.1.0", path = "crates/solc-binaries" }

alloy-primitives = "1.2.1"
alloy-sol-types = "1.2.1"
anyhow = "1.0"
bson = { version = "2.15.0" }
cacache = { version = "13.1.0" }
clap = { version = "4", features = ["derive"] }
dashmap = { version = "6.1.0" }
foundry-compilers-artifacts = { version = "0.18.0" }
futures = { version = "0.3.31" }
hex = "0.4.3"
regex = "1"
moka = "0.12.10"
paste = "1.0.15"
reqwest = { version = "0.12.15", features = ["json"] }
once_cell = "1.21"
schemars = { version = "1.0.4", features = ["semver1"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
    "arbitrary_precision",
    "std",
    "unbounded_depth",
] }
serde_with = { version = "3.14.0", features = ["hex"] }
serde_yaml_ng = { version = "0.10.0" }
sha2 = { version = "0.10.9" }
sp-core = "36.1.0"
sp-runtime = "41.1.0"
strum = { version = "0.27.2", features = ["derive"] }
temp-dir = { version = "0.1.16" }
tempfile = "3.3"
thiserror = "2"
tokio = { version = "1.47.0", default-features = false, features = [
    "rt-multi-thread",
    "process",
    "rt",
] }
uuid = { version = "1.8", features = ["v4"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
] }
indexmap = { version = "2.10.0", default-features = false }

# revive compiler
revive-solc-json-interface = { git = "https://github.com/paritytech/revive", rev = "3389865af7c3ff6f29a586d82157e8bc573c1a8e" }
revive-common = { git = "https://github.com/paritytech/revive", rev = "3389865af7c3ff6f29a586d82157e8bc573c1a8e" }
revive-differential = { git = "https://github.com/paritytech/revive", rev = "3389865af7c3ff6f29a586d82157e8bc573c1a8e" }

[workspace.dependencies.alloy]
version = "1.0.22"
default-features = false
features = [
    "json-abi",
    "providers",
    "provider-ws",
    "provider-ipc",
    "provider-http",
    "provider-debug-api",
    "reqwest",
    "rpc-types",
    "signer-local",
    "std",
    "network",
    "serde",
    "rpc-types-eth",
    "genesis",
]

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

[workspace.lints.clippy]
