[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
edition = "2024"
repository = "https://github.com/paritytech/revive-differential-testing.git"
rust-version = "1.87.0"

[workspace.dependencies]
revive-dt-common = { version = "0.1.0", path = "crates/common" }
revive-dt-compiler = { version = "0.1.0", path = "crates/compiler" }
revive-dt-config = { version = "0.1.0", path = "crates/config" }
revive-dt-core = { version = "0.1.0", path = "crates/core" }
revive-dt-format = { version = "0.1.0", path = "crates/format" }
revive-dt-node = { version = "0.1.0", path = "crates/node" }
revive-dt-node-interaction = { version = "0.1.0", path = "crates/node-interaction" }
revive-dt-node-pool = { version = "0.1.0", path = "crates/node-pool" }
revive-dt-report = { version = "0.1.0", path = "crates/report" }
revive-dt-solc-binaries = { version = "0.1.0", path = "crates/solc-binaries" }
revive-dt-proc-macros = { version = "0.1.0", path = "crates/proc-macros" }
revive-dt-report-processor = { version = "0.1.0", path = "crates/report-processor" }

alloy = { version = "1.4.1", features = ["full", "genesis", "json-rpc"] }
ansi_term = "0.12.1"
anyhow = "1.0"
bson = { version = "2.15.0" }
cacache = { version = "13.1.0" }
clap = { version = "4", features = ["derive", "wrap_help"] }
dashmap = { version = "6.1.0" }
foundry-compilers-artifacts = { version = "0.18.0" }
futures = { version = "0.3.31" }
hex = "0.4.3"
quote = "1.0.44"
regex = "1"
moka = "0.12.10"
paste = "1.0.15"
proc-macro2 = "1.0.106"
reqwest = { version = "0.12.15", features = ["json"] }
once_cell = "1.21"
schemars = { version = "1.0.4", features = ["semver1"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
    "arbitrary_precision",
    "std",
    "unbounded_depth",
] }
serde_with = { version = "3.14.0", features = ["hex"] }
serde_yaml_ng = { version = "0.10.0" }
sha2 = { version = "0.10.9" }
sp-core = "36.1.0"
sp-runtime = "41.1.0"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.117", features = ["full"] }
subxt = { version = "0.44.0" }
temp-dir = { version = "0.1.16" }
tempfile = "3.3"
thiserror = "2"
toml = "0.8"
tokio = { version = "1.47.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "process",
    "rt",
] }
tower = { version = "0.5.2", features = ["limit"] }
uuid = { version = "1.8", features = ["v4"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
] }
indexmap = { version = "2.10.0", default-features = false }
itertools = { version = "0.14.0" }

# revive compiler
revive-solc-json-interface = { version = "0.5.0" }
revive-common = { version = "0.3.0"  }
revive-differential = { version = "0.3.0" }

zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk.git", rev = "891f6554354ce466abd496366dbf8b4f82141241" }

[profile.bench]
inherits = "release"
codegen-units = 1
lto = true

[profile.production]
inherits = "release"
codegen-units = 1
lto = true

[workspace.lints.clippy]
