[package]
name = "revive-dt-compiler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
revive-solc-json-interface = { workspace = true }
revive-common = { workspace = true }
semver = { workspace = true }
