[package]
name = "revive-dt-config"
description = "global configuration for the revive differential tester"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
