[package]
name = "revive-dt-config"
description = "global configuration for the revive differential tester"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
revive-dt-common = { workspace = true }

alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
temp-dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

[lints]
workspace = true
