[package]
name = "revive-dt-node-interaction"
description = "send and trace transactions to nodes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
revive-common = { workspace = true }

revive-dt-format = { workspace = true }
revive-dt-report = { workspace = true }

alloy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
