[package]
name = "revive-dt-node"
description = "abstraction over blockchain nodes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

revive-dt-common = { workspace = true }
revive-dt-config = { workspace = true }
revive-dt-format = { workspace = true }
revive-dt-node-interaction = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
tokio = { workspace = true }
