[package]
name = "revive-dt-node"
description = "abstraction over blockchain nodes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }

revive-common = { workspace = true }
revive-dt-common = { workspace = true }
revive-dt-config = { workspace = true }
revive-dt-node-interaction = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_with = { workspace = true }
serde_yaml_ng = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
subxt = { workspace = true }
# Zombienet uses `std::os::unix` which prevents compiling retester on Windows.
# For running only contract compilations on Windows, Zombienet is gated.
[target.'cfg(unix)'.dependencies]
zombienet-sdk = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
