[package]
name = "revive-differential-testing-retester"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "retester"
path = "src/main.rs"

[dependencies]
revive-differential-testing-format = { workspace = true }
serde_json = { workspace = true }
